# bsc_petaichuk

./: CMakeLists.txt  README.md  fileloader.cpp  fileloader.h  filesaver.cpp  filesaver.h  filterpointcloudstrategy.cpp  filterpointcloudstrategy.h  main.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui  scenewindow.cpp  scenewindow.h  statisticsmanager.cpp  statisticsmanager.h
data_sets/: airplane.pcd  airplane_noisy.pcd  galleon.pcd  galleon_noisy.pcd  lidar_point_cloud.pcd  lidar_point_cloud_noisy.pcd  saratoga.pcd  saratoga_noisy.pcd
